# TrainClient

./: README.md  push-v2.ps1
ApiTest/: test_all_apis.py  test_backend_apis.ps1
Backend/: CMakeLists.txt  cdatabasemanager.cpp  cdatabasemanager.h  csystemconfig.cpp  csystemconfig.h  imageuploader.cpp  imageuploader.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  singleton.h  testqt6.pro
Backend/MVS/: MvCamera.cpp  MvCamera.h  careacameraitem.cpp  careacameraitem.h  cconfigdialog.cpp  cconfigdialog.h  cconfigdialog.ui  cimagestitching.cpp  cimagestitching.h  clinecameraitem.cpp  clinecameraitem.h  clinecameramanager.cpp  clinecameramanager.h  cmvscamera.cpp  cmvscamera.h  cpreviewdialog.cpp  cpreviewdialog.h  cpreviewdialog.ui
Backend/Net/: cdataprotocol.cpp  cdataprotocol.h  clienthandler.cpp  clienthandler.h  cnetdatapool.cpp  cnetdatapool.h  ctcpclientsocket.cpp  ctcpclientsocket.h  ctraintcpserver.cpp  ctraintcpserver.h  imageserver.cpp  imageserver.h  webserver.cpp  webserver.h
Backend/Utils/: imageutil.cpp  imageutil.h  stringutil.cpp  stringutil.h
Backend/common/: constants.h  protocol.cpp  protocol.h
Client/: Client.pro  Config.cpp  Config.h  TASK_CURRENT.md  main.cpp  mainwindow.cpp  mainwindow.h
Client/dialogs/: ProfileDialog.cpp  ProfileDialog.h
Client/network/: ApiClient.cpp  ApiClient.h  ImagePathMapper.cpp  ImagePathMapper.h  TrainApi.cpp  TrainApi.h
Client/pages/: CompareDialog.cpp  CompareDialog.h  HomePage.cpp  HomePage.h  LoginPage.cpp  LoginPage.h
Client/windows/: InspectionWindow.cpp  InspectionWindow.h  (+3 more)
